# advent-of-code-2024

./: .gitignore  Dockerfile  README.md  __init__.py  day_1_list_distances_sum.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
day1/: __init__.py  day1.py  solution.py  test_connection.py  test_day1.py  test_solution.py
day2/: __init__.py  day2.py  solution.py  test_day2.py
day3/: __init__.py  day3.py  solution.py  test_day3.py
day4/: __init__.py  day4.py  solution.py  test_day4.py
utils/: __init__.py  common_logger.py
