[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of Code 2024 Solutions"
authors = [
    {name = "Nicolas Garmoux", email = "nicolas@garmoux.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "numpy>=2.0.2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
]

[tool.pytest.ini_options]
testpaths = ["day1", "day2", "day3", "day4"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "day*"]
